# claudecode-eclipse-ide

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html
claude-eclipse-core/: .project  Cargo.toml  build_and_copy.sh
claude-eclipse-core/src/: chat.rs  console.rs  lib.rs  lock_file.rs  mcp.rs  php_bridge.rs  pty.rs  server.rs  session.rs  shell_env.rs  vterm.rs
com.anthropic.claudecode.eclipse/: .classpath  .project  about.html  build.properties  plugin.xml
com.anthropic.claudecode.eclipse.feature/: .project  feature.xml
com.anthropic.claudecode.eclipse.site/: .project  category.xml  site.xml
com.anthropic.claudecode.eclipse.site/features/: feature.xml
com.anthropic.claudecode.eclipse/native/macos/aarch64/: libclaude_eclipse_core.dylib
com.anthropic.claudecode.eclipse/native/macos/x86_64/: libclaude_eclipse_core.dylib
com.anthropic.claudecode.eclipse/resources/chat/: chat.html
com.anthropic.claudecode.eclipse/runtime/windows/x86_64/: manifest.txt
com.anthropic.claudecode.eclipse/scripts/: bridge.php
com.anthropic.claudecode.eclipse/src/com/anthropic/claudecode/eclipse/: Activator.java  ClaudeStartup.java  Constants.java  NativeCore.java  NativeToolBridge.java
com.anthropic.claudecode.eclipse/src/com/anthropic/claudecode/eclipse/bridge/: PhpBridge.java
com.anthropic.claudecode.eclipse/src/com/anthropic/claudecode/eclipse/chat/: ChatProcessManager.java
com.anthropic.claudecode.eclipse/src/com/anthropic/claudecode/eclipse/editor/: SelectionTracker.java  UiHelper.java
css/: style.css
sql/: insert_function.sql
(+36 files in other folders)
