[package]
name = "claude-eclipse-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "claude_eclipse_core"
crate-type = ["cdylib"]

[dependencies]
jni            = "0.21"
tokio          = { version = "1", features = ["full"] }
axum           = "0.7"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
uuid           = { version = "1", features = ["v4"] }
tokio-stream   = { version = "0.1", features = ["sync"] }
futures-util   = "0.3"
portable-pty   = "0.8"
base64         = "0.22"
vt100          = "0.15"
